--- a/localcdn/edge/Dockerfile
+++ b/localcdn/edge/Dockerfile
@@ -5,6 +5,15 @@ FROM nginx:stable-alpine-slim
 RUN mkdir -p /var/cache/nginx
 
 # Copy custom nginx.conf, replacing default
-COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/nginx.conf.template /etc/nginx/nginx.conf.template
 
-EXPOSE 80
+# Copy the entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+EXPOSE 80 443
+ENTRYPOINT ["/entrypoint.sh"]
+
+
+
+
