set up api project with docker and node

--- a/localcdn/loadbalancer/nginx.conf
+++ b/localcdn/loadbalancer/nginx.conf
@@ -10,6 +10,12 @@ http {
         server edge-eu.local:80;
     }
 
+    # ─── NEW: API upstream ──────────────────────────────────────────
+    upstream apis {
+        server scorecard-api-1:4000;
+        server scorecard-api-2:4000;
+    }
+
     server {
         # Listen on HTTP port 80 inside the container
         listen 80;
@@ -27,6 +33,15 @@ http {
 
             # add the upstream address into the response headers
             add_header X-Backend-Server $upstream_addr;
+        }
+
+        # ─── NEW: proxy API calls ───────────────────────────────────
+        location /api/ {
+            proxy_pass http://apis;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            add_header X-API-Backend $upstream_addr;
         }
     }
 }
