--- a/localcdn/loadbalancer/nginx.conf
+++ b/localcdn/loadbalancer/nginx.conf
@@ -10,10 +10,10 @@ http {
         server edge-eu.local:80;
     }
 
-    # ─── NEW: API upstream ──────────────────────────────────────────
+    # ─── UPDATED: API upstream ────────────────────────────────────────
     upstream apis {
-        server scorecard-api-1:4000;
-        server scorecard-api-2:4000;
+        # point at the API container by name on the Docker network
+        server api:4000;
     }
 
     server {
