--- a/localcdn/api/package.json
+++ b/localcdn/api/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.30",
+    "@types/redis": "^4.0.11",
     "prisma": "^6.9.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
