--- a/localcdn/loadbalancer/nginx.conf
+++ b/localcdn/loadbalancer/nginx.conf
@@ -37,10 +37,31 @@ http {
 
         # ─── NEW: proxy API calls ───────────────────────────────────
         location /api/ {
+
+            # Remove any CORS headers from the upstream API
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
+            # Handle CORS preflight
+            if ($request_method = OPTIONS) {
+                add_header  Access-Control-Allow-Origin  "http://localhost:8080" always;
+                add_header  Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+                add_header  Access-Control-Allow-Headers "Authorization,Content-Type" always;
+                add_header  Access-Control-Max-Age       1728000           always;
+                return 204;
+            }
+
             proxy_pass http://apis;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+
+            # On real responses, only emit one CORS header
+            add_header  Access-Control-Allow-Origin  "http://localhost:8080" always;
+            add_header  Access-Control-Allow-Methods "GET, POST, OPTIONS"      always;
+            add_header  Access-Control-Allow-Headers "Authorization,Content-Type" always;
+
             add_header X-API-Backend $upstream_addr;
         }
     }
