--- a/localcdn/origin/Dockerfile
+++ b/localcdn/origin/Dockerfile
@@ -1,37 +1,27 @@
-# # Use the official Nginx image (ARM64-compatible)
-# FROM nginx:stable-alpine-slim
-
-# # Remove default content and copy our HTML
-# RUN rm -rf /usr/share/nginx/html/*
-# COPY html/ /usr/share/nginx/html/
-
-# # Expose port 80
-# EXPOSE 80
-
-# Default command (nginx runs in foreground by default)
-
-
-# ─── 1) Build stage ─────────────────────────────────────────────
+# ─── 1) Builder stage ─────────────────────────────────────────────
 FROM node:18-alpine AS builder
 WORKDIR /app
 
-# copy and install dependencies
-COPY package*.json ./
-RUN npm ci
+# copy package.json (and lockfile if you have one) and install deps
+COPY app/package.json app/package-lock.json* ./
+RUN npm install
 
-# copy source & build
-COPY . .
-RUN npm run build     # produces /app/build
+# copy everything and build with Vite
+COPY app .
+RUN npm run build      # Vite outputs to /app/dist
 
-# ─── 2) Serve stage ────────────────────────────────────────────
+# ─── 2) Serve stage ──────────────────────────────────────────────
 FROM nginx:alpine
-# remove default nginx content
-RUN rm -rf /usr/share/nginx/html/*
+WORKDIR /
 
-# copy React build into nginx
-COPY --from=builder /app/build /usr/share/nginx/html
+# install wget so HEALTHCHECK can use it
+RUN apk add --no-cache wget \
+    && rm -rf /usr/share/nginx/html/*
 
-# (optional) expose a health-check endpoint
+# copy the Vite-built files into nginx
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+# optional healthcheck
 HEALTHCHECK --interval=30s --timeout=3s \
   CMD wget -qO- http://localhost/ || exit 1
 
