fixed up lb nginx config

--- a/localcdn/loadbalancer/nginx.conf
+++ b/localcdn/loadbalancer/nginx.conf
@@ -3,6 +3,16 @@
 events { }
 
 http {
+    # ─── whitelist allowed origins ─────────────────────────────────────────
+    map $http_origin $cors_origin {
+        default "";
+        "~^http://localhost:8080$"        $http_origin;
+        "~^http://localhost:8090$"        $http_origin;
+        "~^http://edge-us\.local:8081$"   $http_origin;
+        "~^http://edge-eu\.local:8082$"   $http_origin;
+        "~^http://localhost:3000$"        $http_origin;
+    }
+
     # ── Define the two edge backends in a round‑robin group ────────────────
     upstream edges {
         # The name “edges” is our pool of backend servers
@@ -37,32 +47,31 @@ http {
 
         # ─── NEW: proxy API calls ───────────────────────────────────
         location /api/ {
+                # hide any CORS headers from upstream
+                proxy_hide_header Access-Control-Allow-Origin;
+                proxy_hide_header Access-Control-Allow-Methods;
+                proxy_hide_header Access-Control-Allow-Headers;
 
-            # Remove any CORS headers from the upstream API
-            proxy_hide_header Access-Control-Allow-Origin;
-            proxy_hide_header Access-Control-Allow-Methods;
-            proxy_hide_header Access-Control-Allow-Headers;
+                # handle preflight
+                if ($request_method = OPTIONS) {
+                    add_header 'Access-Control-Allow-Origin'  $http_origin  always;
+                    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+                    add_header 'Access-Control-Max-Age'       1728000           always;
+                    return 204;
+                }
 
-            # Handle CORS preflight
-            if ($request_method = OPTIONS) {
-                add_header  Access-Control-Allow-Origin  "http://localhost:8080" always;
-                add_header  Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-                add_header  Access-Control-Allow-Headers "Authorization,Content-Type" always;
-                add_header  Access-Control-Max-Age       1728000           always;
-                return 204;
-            }
+                proxy_pass http://apis;
+                proxy_set_header Host               $host;
+                proxy_set_header X-Real-IP          $remote_addr;
+                proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
 
-            proxy_pass http://apis;
-            proxy_set_header Host               $host;
-            proxy_set_header X-Real-IP          $remote_addr;
-            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+                # reflect the origin header back for real requests
+                add_header 'Access-Control-Allow-Origin'  $http_origin  always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
 
-            # On real responses, only emit one CORS header
-            add_header  Access-Control-Allow-Origin  "http://localhost:8080" always;
-            add_header  Access-Control-Allow-Methods "GET, POST, OPTIONS"      always;
-            add_header  Access-Control-Allow-Headers "Authorization,Content-Type" always;
-
-            add_header X-API-Backend $upstream_addr;
+                add_header X-API-Backend $upstream_addr;
         }
     }
 }
