got it working on https

--- a/localcdn/loadbalancer/nginx.conf
+++ b/localcdn/loadbalancer/nginx.conf
@@ -6,11 +6,14 @@ http {
     # ─── whitelist allowed origins ─────────────────────────────────────────
     map $http_origin $cors_origin {
         default "";
-        "~^http://localhost:8080$"        $http_origin;
-        "~^http://localhost:8090$"        $http_origin;
-        "~^http://edge-us\.local:8081$"   $http_origin;
-        "~^http://edge-eu\.local:8082$"   $http_origin;
-        "~^http://localhost:3000$"        $http_origin;
+        # exact origins
+        "http://localhost:8080"      $http_origin;
+        "http://localhost:8090"      $http_origin;
+        "http://edge-us.local:8081"  $http_origin;
+        "http://edge-eu.local:8082"  $http_origin;
+        "https://edge-us.local:8443"  $http_origin;
+        "https://edge-eu.local:8444"  $http_origin;
+        "http://localhost:3000"      $http_origin;
     }
 
     # ── Define the two edge backends in a round‑robin group ────────────────
@@ -33,13 +36,31 @@ http {
 
  
         location / {
+            # hide any CORS headers from upstream
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
+            # handle preflight
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin'  $http_origin  always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+                add_header 'Access-Control-Max-Age'       1728000           always;
+                return 204;
+            }
+
             # forward the request to one of the edges
             proxy_pass http://edges;
-
-            # pass through the Host header so caching still works
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+
+            # reflect the origin header back for real requests
+            add_header 'Access-Control-Allow-Origin'  $http_origin  always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
 
             # add the upstream address into the response headers
             add_header X-Backend-Server $upstream_addr;
