--- a/local-web-infra/loadbalancer/nginx.conf
+++ b/local-web-infra/loadbalancer/nginx.conf
@@ -1,4 +1,4 @@
-# ~/localcdn/loadbalancer/nginx.conf
+# ~/localwebinfa/loadbalancer/nginx.conf
 
 events { }
 
@@ -9,18 +9,18 @@ http {
         # exact origins
         "http://localhost:8080"      $http_origin;
         "http://localhost:8090"      $http_origin;
-        "http://edge-us.local:8081"  $http_origin;
-        "http://edge-eu.local:8082"  $http_origin;
-        "https://edge-us.local:8443"  $http_origin;
-        "https://edge-eu.local:8444"  $http_origin;
+        "http://edge-site-us.local:8081"  $http_origin;
+        "http://edge-site-eu.local:8082"  $http_origin;
+        "https://edge-site-us.local:8443"  $http_origin;
+        "https://edge-site-eu.local:8444"  $http_origin;
         "http://localhost:3000"      $http_origin;
     }
 
     # ── Define the two edge backends in a round‑robin group ────────────────
     upstream edges {
         # The name “edges” is our pool of backend servers
-        server edge-us.local:80;
-        server edge-eu.local:80;
+        server edge-site-us.local:80;
+        server edge-site-eu.local:80;
     }
 
     # ─── UPDATED: API upstream ────────────────────────────────────────
