--- a/local-web-infra/site/edge/nginx/nginx-eu.conf
+++ b/local-web-infra/site/edge/nginx/nginx-eu.conf
@@ -15,7 +15,7 @@ http {
 
     server {
         listen 80;
-        server_name edge-us.local;
+        server_name edge-site-eu.local;
 
         # Add a header to inspect cache status (HIT / MISS)
         add_header X-Cache-Status $upstream_cache_status;
@@ -34,10 +34,11 @@ http {
         }
     }
 
+
       # ── HTTPS Server with SSL/TLS ────────────────────────────────────────────
   server {
     listen 443 ssl;
-    server_name edge-us.local;
+    server_name edge-site-eu.local;
 
     # Path inside container where we’ll mount the certs
     ssl_certificate     /etc/nginx/certs/server.crt;
