--- a/local-web-infra/loadbalancer/nginx.conf
+++ b/local-web-infra/loadbalancer/nginx.conf
@@ -8,11 +8,16 @@ http {
         default "";
         # exact origins
         "http://localhost:8080"      $http_origin;
+        "http://localhost:8085"      $http_origin;
         "http://localhost:8090"      $http_origin;
         "http://edge-site-us.local:8081"  $http_origin;
         "http://edge-site-eu.local:8082"  $http_origin;
         "https://edge-site-us.local:8443"  $http_origin;
         "https://edge-site-eu.local:8444"  $http_origin;
+        "http://edge-cdn-us.local:8085"  $http_origin;
+        "http://edge-cdn-eu.local:8086"  $http_origin;
+        "https://edge-cdn-us.local:8445"  $http_origin;
+        "https://edge-cdn-eu.local:8446"  $http_origin;
         "http://localhost:3000"      $http_origin;
     }
 
@@ -23,6 +28,12 @@ http {
         server edge-site-eu.local:80;
     }
 
+    upstream cdn {
+        server edge-cdn-us.local:80;
+        server edge-cdn-eu.local:80;
+    }
+
+  
     # ─── UPDATED: API upstream ────────────────────────────────────────
     upstream apis {
         # point at the API container by name on the Docker network
@@ -52,6 +63,37 @@ http {
 
             # forward the request to one of the edges
             proxy_pass http://edges;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+
+            # reflect the origin header back for real requests
+            add_header 'Access-Control-Allow-Origin'  $http_origin  always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+
+            # add the upstream address into the response headers
+            add_header X-Backend-Server $upstream_addr;
+        }
+
+        location /cdn {
+            # hide any CORS headers from upstream
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+
+            # handle preflight
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin'  $http_origin  always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+                add_header 'Access-Control-Max-Age'       1728000           always;
+                return 204;
+            }
+
+            # forward the request to one of the edges
+            proxy_pass http://cdn;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
